--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,9 +1,14 @@
 <h2>クッキーから情報を取得</h2>
-
 <div class="alert alert-success" role="alert">
-  UserName: <%= userName %>
+  User ID from sessionString: <%= account.userId %>
 </div>
 <div class="alert alert-success" role="alert">
-  Name: <%= name %>
+  User Name from sessionString: <%= account.userName %>
+</div>
+<div class="alert alert-success" role="alert">
+  User ID: <%= userId %>
+</div>
+<div class="alert alert-success" role="alert">
+  User Name: <%= userName %>
 </div>
 
