最終断面コミット

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,14 +1,13 @@
-<h2>クッキーから情報を取得</h2>
-<div class="alert alert-success" role="alert">
-  User ID from sessionString: <%= account.userId %>
-</div>
-<div class="alert alert-success" role="alert">
-  User Name from sessionString: <%= account.userName %>
-</div>
 <div class="alert alert-success" role="alert">
   User ID: <%= userId %>
 </div>
 <div class="alert alert-success" role="alert">
   User Name: <%= userName %>
 </div>
-
+<div class="alert alert-success" role="alert">
+  idToken: <%= idToken %>
+</div>
+<div class="alert alert-success" role="alert">
+  Count: <%= count %>
+</div>
+<a class="btn btn-primary" role="button" href="/">Top画面</a>
