--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,3 @@
 <h2>Azure AD で認証を行いユーザー情報をCookieにセット</h2>
 <a class="btn btn-primary" role="button" href="/auth">Azure AD認証</a>
+<a class="btn btn-primary" role="button" href="/user">ユーザー情報</a>
